--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
@@ -16,6 +16,9 @@
                    Los blogs son la mejor formas de compartir información y tus ideas.
                    mucho mas que ir a conferencias o salir en youtube. Excepto si eres rocksat 
                 </p>
+                <p>
+                   Suscribete y dale like
+                 </p>
             </div>
         </div>
     </body>
