una version del hiperblog

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a hyperglog</title>
+        <title>Bienvenido a hyperglog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
